y.output
   0  $accept : Prog $end

   1  Prog : ListaDecl

   2  ListaDecl : DeclVar ListaDecl
   3            | DeclFun ListaDecl
   4            |

   5  DeclVar : Tipo ListaIdent ';'

   6  Tipo : INT
   7       | DOUBLE
   8       | BOOLEAN

   9  ListaIdent : IDENT RestoListaIdent

  10  RestoListaIdent : ',' ListaIdent
  11                  |

  12  DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' DeclVar ListaCmd Retorno '}'
  13          | FUNC VOID IDENT '(' FormalPar ')' '{' DeclVar ListaCmd '}'

  14  Retorno : RETURN F ';'

  15  ChamadaFunc : IDENT '(' ParamChamada ')' ';'

  16  ParamChamada : L ',' ParamChamada
  17               | L
  18               |

  19  FormalPar : ParamList
  20            |

  21  ParamList : Tipo IDENT RestoParamList

  22  RestoParamList : ',' ParamList
  23                 |

  24  Bloco : '{' ListaCmd '}' ';'

  25  ListaCmd : Cmd ListaCmd
  26           |

  27  Cmd : Bloco
  28      | WHILE '(' E ')' Cmd
  29      | IDENT '=' E ';'
  30      | IF '(' E ')' Cmd RestoIf

  31  RestoIf : ELSE Cmd
  32          |

  33  E : E '+' T
  34    | E '-' T
  35    | T

  36  T : T '*' L
  37    | T '/' L
  38    | L

  39  L : L '>' R
  40    | L '<' R
  41    | L "<=" R
  42    | L ">=" R
  43    | L "!=" R
  44    | L "==" R
  45    | R

  46  R : R "||" F
  47    | R "&&" F
  48    | F

  49  F : IDENT
  50    | NUM
  51    | '(' E ')'
  52    | ChamadaFunc

state 0
	$accept : . Prog $end  (0)
	ListaDecl : .  (4)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	FUNC  shift 4
	$end  reduce 4

	Prog  goto 5
	ListaDecl  goto 6
	DeclVar  goto 7
	DeclFun  goto 8
	Tipo  goto 9


state 1
	Tipo : INT .  (6)

	.  reduce 6


state 2
	Tipo : DOUBLE .  (7)

	.  reduce 7


state 3
	Tipo : BOOLEAN .  (8)

	.  reduce 8


state 4
	DeclFun : FUNC . Tipo IDENT '(' FormalPar ')' '{' DeclVar ListaCmd Retorno '}'  (12)
	DeclFun : FUNC . VOID IDENT '(' FormalPar ')' '{' DeclVar ListaCmd '}'  (13)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 10
	.  error

	Tipo  goto 11


state 5
	$accept : Prog . $end  (0)

	$end  accept


state 6
	Prog : ListaDecl .  (1)

	.  reduce 1


state 7
	ListaDecl : DeclVar . ListaDecl  (2)
	ListaDecl : .  (4)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	FUNC  shift 4
	$end  reduce 4

	ListaDecl  goto 12
	DeclVar  goto 7
	DeclFun  goto 8
	Tipo  goto 9


state 8
	ListaDecl : DeclFun . ListaDecl  (3)
	ListaDecl : .  (4)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	FUNC  shift 4
	$end  reduce 4

	ListaDecl  goto 13
	DeclVar  goto 7
	DeclFun  goto 8
	Tipo  goto 9


state 9
	DeclVar : Tipo . ListaIdent ';'  (5)

	IDENT  shift 14
	.  error

	ListaIdent  goto 15


state 10
	DeclFun : FUNC VOID . IDENT '(' FormalPar ')' '{' DeclVar ListaCmd '}'  (13)

	IDENT  shift 16
	.  error


state 11
	DeclFun : FUNC Tipo . IDENT '(' FormalPar ')' '{' DeclVar ListaCmd Retorno '}'  (12)

	IDENT  shift 17
	.  error


state 12
	ListaDecl : DeclVar ListaDecl .  (2)

	.  reduce 2


state 13
	ListaDecl : DeclFun ListaDecl .  (3)

	.  reduce 3


state 14
	ListaIdent : IDENT . RestoListaIdent  (9)
	RestoListaIdent : .  (11)

	','  shift 18
	';'  reduce 11

	RestoListaIdent  goto 19


state 15
	DeclVar : Tipo ListaIdent . ';'  (5)

	';'  shift 20
	.  error


state 16
	DeclFun : FUNC VOID IDENT . '(' FormalPar ')' '{' DeclVar ListaCmd '}'  (13)

	'('  shift 21
	.  error


state 17
	DeclFun : FUNC Tipo IDENT . '(' FormalPar ')' '{' DeclVar ListaCmd Retorno '}'  (12)

	'('  shift 22
	.  error


state 18
	RestoListaIdent : ',' . ListaIdent  (10)

	IDENT  shift 14
	.  error

	ListaIdent  goto 23


state 19
	ListaIdent : IDENT RestoListaIdent .  (9)

	.  reduce 9


state 20
	DeclVar : Tipo ListaIdent ';' .  (5)

	.  reduce 5


state 21
	DeclFun : FUNC VOID IDENT '(' . FormalPar ')' '{' DeclVar ListaCmd '}'  (13)
	FormalPar : .  (20)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  reduce 20

	Tipo  goto 24
	FormalPar  goto 25
	ParamList  goto 26


state 22
	DeclFun : FUNC Tipo IDENT '(' . FormalPar ')' '{' DeclVar ListaCmd Retorno '}'  (12)
	FormalPar : .  (20)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  reduce 20

	Tipo  goto 24
	FormalPar  goto 27
	ParamList  goto 26


state 23
	RestoListaIdent : ',' ListaIdent .  (10)

	.  reduce 10


state 24
	ParamList : Tipo . IDENT RestoParamList  (21)

	IDENT  shift 28
	.  error


state 25
	DeclFun : FUNC VOID IDENT '(' FormalPar . ')' '{' DeclVar ListaCmd '}'  (13)

	')'  shift 29
	.  error


state 26
	FormalPar : ParamList .  (19)

	.  reduce 19


state 27
	DeclFun : FUNC Tipo IDENT '(' FormalPar . ')' '{' DeclVar ListaCmd Retorno '}'  (12)

	')'  shift 30
	.  error


state 28
	ParamList : Tipo IDENT . RestoParamList  (21)
	RestoParamList : .  (23)

	','  shift 31
	')'  reduce 23

	RestoParamList  goto 32


state 29
	DeclFun : FUNC VOID IDENT '(' FormalPar ')' . '{' DeclVar ListaCmd '}'  (13)

	'{'  shift 33
	.  error


state 30
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' . '{' DeclVar ListaCmd Retorno '}'  (12)

	'{'  shift 34
	.  error


state 31
	RestoParamList : ',' . ParamList  (22)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	.  error

	Tipo  goto 24
	ParamList  goto 35


state 32
	ParamList : Tipo IDENT RestoParamList .  (21)

	.  reduce 21


state 33
	DeclFun : FUNC VOID IDENT '(' FormalPar ')' '{' . DeclVar ListaCmd '}'  (13)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	.  error

	DeclVar  goto 36
	Tipo  goto 9


state 34
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' . DeclVar ListaCmd Retorno '}'  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	.  error

	DeclVar  goto 37
	Tipo  goto 9


state 35
	RestoParamList : ',' ParamList .  (22)

	.  reduce 22


state 36
	DeclFun : FUNC VOID IDENT '(' FormalPar ')' '{' DeclVar . ListaCmd '}'  (13)
	ListaCmd : .  (26)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	'}'  reduce 26

	ListaCmd  goto 42
	Bloco  goto 43
	Cmd  goto 44


state 37
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' DeclVar . ListaCmd Retorno '}'  (12)
	ListaCmd : .  (26)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	RETURN  reduce 26

	ListaCmd  goto 45
	Bloco  goto 43
	Cmd  goto 44


state 38
	Cmd : IDENT . '=' E ';'  (29)

	'='  shift 46
	.  error


state 39
	Cmd : WHILE . '(' E ')' Cmd  (28)

	'('  shift 47
	.  error


state 40
	Cmd : IF . '(' E ')' Cmd RestoIf  (30)

	'('  shift 48
	.  error


state 41
	Bloco : '{' . ListaCmd '}' ';'  (24)
	ListaCmd : .  (26)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	'}'  reduce 26

	ListaCmd  goto 49
	Bloco  goto 43
	Cmd  goto 44


state 42
	DeclFun : FUNC VOID IDENT '(' FormalPar ')' '{' DeclVar ListaCmd . '}'  (13)

	'}'  shift 50
	.  error


state 43
	Cmd : Bloco .  (27)

	.  reduce 27


state 44
	ListaCmd : Cmd . ListaCmd  (25)
	ListaCmd : .  (26)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	RETURN  reduce 26
	'}'  reduce 26

	ListaCmd  goto 51
	Bloco  goto 43
	Cmd  goto 44


state 45
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' DeclVar ListaCmd . Retorno '}'  (12)

	RETURN  shift 52
	.  error

	Retorno  goto 53


state 46
	Cmd : IDENT '=' . E ';'  (29)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	E  goto 60
	T  goto 61
	R  goto 62


state 47
	Cmd : WHILE '(' . E ')' Cmd  (28)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	E  goto 63
	T  goto 61
	R  goto 62


state 48
	Cmd : IF '(' . E ')' Cmd RestoIf  (30)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	E  goto 64
	T  goto 61
	R  goto 62


state 49
	Bloco : '{' ListaCmd . '}' ';'  (24)

	'}'  shift 65
	.  error


state 50
	DeclFun : FUNC VOID IDENT '(' FormalPar ')' '{' DeclVar ListaCmd '}' .  (13)

	.  reduce 13


state 51
	ListaCmd : Cmd ListaCmd .  (25)

	.  reduce 25


state 52
	Retorno : RETURN . F ';'  (14)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 66
	ChamadaFunc  goto 58


state 53
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' DeclVar ListaCmd Retorno . '}'  (12)

	'}'  shift 67
	.  error


state 54
	ChamadaFunc : IDENT . '(' ParamChamada ')' ';'  (15)
	F : IDENT .  (49)

	'('  shift 68
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'<'  reduce 49
	'>'  reduce 49
	">="  reduce 49
	"!="  reduce 49
	"=="  reduce 49
	"&&"  reduce 49
	"||"  reduce 49
	';'  reduce 49
	','  reduce 49
	')'  reduce 49
	"<="  reduce 49


state 55
	F : NUM .  (50)

	.  reduce 50


state 56
	F : '(' . E ')'  (51)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	E  goto 69
	T  goto 61
	R  goto 62


state 57
	R : F .  (48)

	.  reduce 48


state 58
	F : ChamadaFunc .  (52)

	.  reduce 52


state 59
	T : L .  (38)
	L : L . '>' R  (39)
	L : L . '<' R  (40)
	L : L . "<=" R  (41)
	L : L . ">=" R  (42)
	L : L . "!=" R  (43)
	L : L . "==" R  (44)

	'<'  shift 70
	'>'  shift 71
	">="  shift 72
	"!="  shift 73
	"=="  shift 74
	"<="  shift 75
	'+'  reduce 38
	'-'  reduce 38
	'*'  reduce 38
	'/'  reduce 38
	';'  reduce 38
	')'  reduce 38


state 60
	Cmd : IDENT '=' E . ';'  (29)
	E : E . '+' T  (33)
	E : E . '-' T  (34)

	'+'  shift 76
	'-'  shift 77
	';'  shift 78
	.  error


state 61
	E : T .  (35)
	T : T . '*' L  (36)
	T : T . '/' L  (37)

	'*'  shift 79
	'/'  shift 80
	'+'  reduce 35
	'-'  reduce 35
	';'  reduce 35
	')'  reduce 35


state 62
	L : R .  (45)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'<'  reduce 45
	'>'  reduce 45
	">="  reduce 45
	"!="  reduce 45
	"=="  reduce 45
	';'  reduce 45
	','  reduce 45
	')'  reduce 45
	"<="  reduce 45


state 63
	Cmd : WHILE '(' E . ')' Cmd  (28)
	E : E . '+' T  (33)
	E : E . '-' T  (34)

	'+'  shift 76
	'-'  shift 77
	')'  shift 83
	.  error


state 64
	Cmd : IF '(' E . ')' Cmd RestoIf  (30)
	E : E . '+' T  (33)
	E : E . '-' T  (34)

	'+'  shift 76
	'-'  shift 77
	')'  shift 84
	.  error


state 65
	Bloco : '{' ListaCmd '}' . ';'  (24)

	';'  shift 85
	.  error


state 66
	Retorno : RETURN F . ';'  (14)

	';'  shift 86
	.  error


state 67
	DeclFun : FUNC Tipo IDENT '(' FormalPar ')' '{' DeclVar ListaCmd Retorno '}' .  (12)

	.  reduce 12


state 68
	ChamadaFunc : IDENT '(' . ParamChamada ')' ';'  (15)
	ParamChamada : .  (18)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	')'  reduce 18

	F  goto 57
	ChamadaFunc  goto 58
	ParamChamada  goto 87
	L  goto 88
	R  goto 62


state 69
	E : E . '+' T  (33)
	E : E . '-' T  (34)
	F : '(' E . ')'  (51)

	'+'  shift 76
	'-'  shift 77
	')'  shift 89
	.  error


state 70
	L : L '<' . R  (40)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 90


state 71
	L : L '>' . R  (39)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 91


state 72
	L : L ">=" . R  (42)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 92


state 73
	L : L "!=" . R  (43)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 93


state 74
	L : L "==" . R  (44)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 94


state 75
	L : L "<=" . R  (41)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	R  goto 95


state 76
	E : E '+' . T  (33)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	T  goto 96
	R  goto 62


state 77
	E : E '-' . T  (34)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 59
	T  goto 97
	R  goto 62


state 78
	Cmd : IDENT '=' E ';' .  (29)

	.  reduce 29


state 79
	T : T '*' . L  (36)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 98
	R  goto 62


state 80
	T : T '/' . L  (37)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 57
	ChamadaFunc  goto 58
	L  goto 99
	R  goto 62


state 81
	R : R "&&" . F  (47)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 100
	ChamadaFunc  goto 58


state 82
	R : R "||" . F  (46)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	.  error

	F  goto 101
	ChamadaFunc  goto 58


state 83
	Cmd : WHILE '(' E ')' . Cmd  (28)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	.  error

	Bloco  goto 43
	Cmd  goto 102


state 84
	Cmd : IF '(' E ')' . Cmd RestoIf  (30)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	.  error

	Bloco  goto 43
	Cmd  goto 103


state 85
	Bloco : '{' ListaCmd '}' ';' .  (24)

	.  reduce 24


state 86
	Retorno : RETURN F ';' .  (14)

	.  reduce 14


state 87
	ChamadaFunc : IDENT '(' ParamChamada . ')' ';'  (15)

	')'  shift 104
	.  error


state 88
	ParamChamada : L . ',' ParamChamada  (16)
	ParamChamada : L .  (17)
	L : L . '>' R  (39)
	L : L . '<' R  (40)
	L : L . "<=" R  (41)
	L : L . ">=" R  (42)
	L : L . "!=" R  (43)
	L : L . "==" R  (44)

	'<'  shift 70
	'>'  shift 71
	">="  shift 72
	"!="  shift 73
	"=="  shift 74
	','  shift 105
	"<="  shift 75
	')'  reduce 17


state 89
	F : '(' E ')' .  (51)

	.  reduce 51


state 90
	L : L '<' R .  (40)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	">="  reduce 40
	"!="  reduce 40
	"=="  reduce 40
	';'  reduce 40
	','  reduce 40
	')'  reduce 40
	"<="  reduce 40


state 91
	L : L '>' R .  (39)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	">="  reduce 39
	"!="  reduce 39
	"=="  reduce 39
	';'  reduce 39
	','  reduce 39
	')'  reduce 39
	"<="  reduce 39


state 92
	L : L ">=" R .  (42)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 42
	'-'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	">="  reduce 42
	"!="  reduce 42
	"=="  reduce 42
	';'  reduce 42
	','  reduce 42
	')'  reduce 42
	"<="  reduce 42


state 93
	L : L "!=" R .  (43)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 43
	'-'  reduce 43
	'*'  reduce 43
	'/'  reduce 43
	'<'  reduce 43
	'>'  reduce 43
	">="  reduce 43
	"!="  reduce 43
	"=="  reduce 43
	';'  reduce 43
	','  reduce 43
	')'  reduce 43
	"<="  reduce 43


state 94
	L : L "==" R .  (44)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'<'  reduce 44
	'>'  reduce 44
	">="  reduce 44
	"!="  reduce 44
	"=="  reduce 44
	';'  reduce 44
	','  reduce 44
	')'  reduce 44
	"<="  reduce 44


state 95
	L : L "<=" R .  (41)
	R : R . "||" F  (46)
	R : R . "&&" F  (47)

	"&&"  shift 81
	"||"  shift 82
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	">="  reduce 41
	"!="  reduce 41
	"=="  reduce 41
	';'  reduce 41
	','  reduce 41
	')'  reduce 41
	"<="  reduce 41


state 96
	E : E '+' T .  (33)
	T : T . '*' L  (36)
	T : T . '/' L  (37)

	'*'  shift 79
	'/'  shift 80
	'+'  reduce 33
	'-'  reduce 33
	';'  reduce 33
	')'  reduce 33


state 97
	E : E '-' T .  (34)
	T : T . '*' L  (36)
	T : T . '/' L  (37)

	'*'  shift 79
	'/'  shift 80
	'+'  reduce 34
	'-'  reduce 34
	';'  reduce 34
	')'  reduce 34


state 98
	T : T '*' L .  (36)
	L : L . '>' R  (39)
	L : L . '<' R  (40)
	L : L . "<=" R  (41)
	L : L . ">=" R  (42)
	L : L . "!=" R  (43)
	L : L . "==" R  (44)

	'<'  shift 70
	'>'  shift 71
	">="  shift 72
	"!="  shift 73
	"=="  shift 74
	"<="  shift 75
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	';'  reduce 36
	')'  reduce 36


state 99
	T : T '/' L .  (37)
	L : L . '>' R  (39)
	L : L . '<' R  (40)
	L : L . "<=" R  (41)
	L : L . ">=" R  (42)
	L : L . "!=" R  (43)
	L : L . "==" R  (44)

	'<'  shift 70
	'>'  shift 71
	">="  shift 72
	"!="  shift 73
	"=="  shift 74
	"<="  shift 75
	'+'  reduce 37
	'-'  reduce 37
	'*'  reduce 37
	'/'  reduce 37
	';'  reduce 37
	')'  reduce 37


state 100
	R : R "&&" F .  (47)

	.  reduce 47


state 101
	R : R "||" F .  (46)

	.  reduce 46


state 102
	Cmd : WHILE '(' E ')' Cmd .  (28)

	.  reduce 28


103: shift/reduce conflict (shift 106, reduce 32) on ELSE
state 103
	Cmd : IF '(' E ')' Cmd . RestoIf  (30)
	RestoIf : .  (32)

	ELSE  shift 106
	IDENT  reduce 32
	WHILE  reduce 32
	IF  reduce 32
	RETURN  reduce 32
	'{'  reduce 32
	'}'  reduce 32

	RestoIf  goto 107


state 104
	ChamadaFunc : IDENT '(' ParamChamada ')' . ';'  (15)

	';'  shift 108
	.  error


state 105
	ParamChamada : L ',' . ParamChamada  (16)
	ParamChamada : .  (18)

	IDENT  shift 54
	NUM  shift 55
	'('  shift 56
	')'  reduce 18

	F  goto 57
	ChamadaFunc  goto 58
	ParamChamada  goto 109
	L  goto 88
	R  goto 62


state 106
	RestoIf : ELSE . Cmd  (31)

	IDENT  shift 38
	WHILE  shift 39
	IF  shift 40
	'{'  shift 41
	.  error

	Bloco  goto 43
	Cmd  goto 110


state 107
	Cmd : IF '(' E ')' Cmd RestoIf .  (30)

	.  reduce 30


state 108
	ChamadaFunc : IDENT '(' ParamChamada ')' ';' .  (15)

	.  reduce 15


state 109
	ParamChamada : L ',' ParamChamada .  (16)

	.  reduce 16


state 110
	RestoIf : ELSE Cmd .  (31)

	.  reduce 31


State 103 contains 1 shift/reduce conflict.


33 terminals, 23 nonterminals
53 grammar rules, 111 states
